--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -626,14 +626,14 @@
                                                     <!-- use thymeleaf href here .. to insert the brandId at the end of href as param.. ie. brand/id=? -->
                                                     <a class="widget-list-link"
                                                        href="product/brand.html">Beyond
-                                                        Meat</a>
+                                                        Meat 비욘드 비프</a>
                                                 </li>
 
                                                 <li class="widget-list-item">
                                                     <!-- insert the brandId at the end of href as param.. ie. product/category-and-brand?brandId=? -->
                                                     <a class="widget-list-link"
                                                        href="product/brand.html">Sweet
-                                                        Earth</a>
+                                                        Earth 스윗 얼스</a>
                                                 </li>
 
                                             </ul>
