--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -243,12 +243,12 @@
             <div class="modal-body tab-content py-4">
 
                 <!-- customer form action (sign-in) -->
-                <form action="customer-signin" method="post" class="tab-pane fade show active"
+                <form th:action="@{/customer-signin}" method="post" class="tab-pane fade show active"
                       autocomplete="on" novalidate
                       id="userLoginForm"> <!-- omitted class="needs-validation"  -->
                     <div class="mb-3">
                         <label class="form-label" for="id">ID</label>
-                        <input class="form-control" type="email" id="loginInInput" placeholder="veganlife123"
+                        <input class="form-control" type="email" id="loginInInput" placeholder="veganlife123 (pw: 123)"
                                required>
                         <!-- <div class="invalid-feedback">Please provide the correct customer ID</div> -->
                     </div>
@@ -267,7 +267,7 @@
                 </form>
 
                 <!-- customer form action (sign up)-->
-                <form action="customer-signup" method="post" class="needs-validation tab-pane fade" autocomplete="on"
+                <form th:action="@{/customer-signup}" method="post" class="needs-validation tab-pane fade" autocomplete="on"
                       novalidate id="signup-tab">
                     <div class="mb-3">
                         <label class="form-label" for="id">ID</label>
