--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -613,7 +613,7 @@
                             <!-- Special offers for discounted items.. a to-do for later..?-->
                             <div class="accordion-item border-bottom">
                                 <h3 class="accordion-header px-grid-gutter"><a
-                                        class="nav-link-style d-block fs-md fw-normal py-3" href="#"><span
+                                        class="nav-link-style d-block fs-md fw-normal py-3" href=""><span
                                         class="d-flex align-items-center">
                                         <i class="ci-lable fs-lg text-primary mt-n1 me-2"></i>
                                         할인 행사 (coming soon)</span></a>
@@ -646,7 +646,7 @@
                                                 <li class="widget-list-item">
                                                     <!-- use thymeleaf href here .. to insert the brandId at the end of href as param.. ie. brand/id=? -->
                                                     <a class="widget-list-link"
-                                                       href="product/brand.html">Beyond
+                                                       th:href="@{brand/3}">Beyond
                                                         Meat 비욘드 비프
 
                                                         <!--
@@ -659,7 +659,7 @@
                                                 <li class="widget-list-item">
                                                     <!-- insert the brandId at the end of href as param.. ie. product/category-and-brand?brandId=? -->
                                                     <a class="widget-list-link"
-                                                       href="product/brand.html">Sweet
+                                                       th:href="@{brand/21}">Sweet
                                                         Earth 스윗 얼스</a>
                                                 </li>
 
@@ -694,14 +694,14 @@
                                                 <li class="widget-list-item">
                                                     <!-- insert the brandId at the end of href as param.. ie. product/category-and-brand?brandId=? -->
                                                     <a class="widget-list-link"
-                                                       href="product/brand.html">Oatly</a>
+                                                       th:href="@{brand/23}">Oatly</a>
                                                 </li>
 
                                                 <li class="widget-list-item">
                                                     <!-- insert the brandId at the end of href as param.. ie. product/category-and-brand?brandId=? -->
                                                     <a class="widget-list-link"
-                                                       href="product/brand.html">Doozy
-                                                        Pots</a>
+                                                       th:href="@{brand/24}">Doozy Pots
+                                                   </a>
                                                 </li>
 
                                             </ul>
@@ -734,13 +734,13 @@
                                                 <li class="widget-list-item">
                                                     <!-- insert the brandId at the end of href as param.. ie. product/category-and-brand?brandId=? -->
                                                     <a class="widget-list-link"
-                                                       href="product/brand.html">Hippeas</a>
+                                                       th:href="@{brand/25}">Hippeas</a>
                                                 </li>
 
                                                 <li class="widget-list-item">
                                                     <!-- insert the brandId at the end of href as param.. ie. product/category-and-brand?brandId=? -->
                                                     <a class="widget-list-link"
-                                                       href="product/brand.html">Terra</a>
+                                                       th:href="@{brand/26}">Terra</a>
                                                 </li>
 
                                             </ul>
@@ -774,7 +774,7 @@
                                                 <li class="widget-list-item">
                                                     <!-- insert the brandId at the end of href as param.. ie. product/category-and-brand?brandId=? -->
                                                     <a class="widget-list-link"
-                                                       href="product/brand.html">Hope</a>
+                                                       th:href="@{brand/27}">Hope</a>
                                                 </li>
 
                                             </ul>
