--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -646,7 +646,7 @@
                                                 <li class="widget-list-item">
                                                     <!-- use thymeleaf href here .. to insert the brandId at the end of href as param.. ie. brand/id=? -->
                                                     <a class="widget-list-link"
-                                                       th:href="@{brand/3}">Beyond
+                                                       th:href="@{/brand/3}">Beyond
                                                         Meat 비욘드 비프
 
                                                         <!--
@@ -659,7 +659,7 @@
                                                 <li class="widget-list-item">
                                                     <!-- insert the brandId at the end of href as param.. ie. product/category-and-brand?brandId=? -->
                                                     <a class="widget-list-link"
-                                                       th:href="@{brand/21}">Sweet
+                                                       th:href="@{/brand/21}">Sweet
                                                         Earth 스윗 얼스</a>
                                                 </li>
 
@@ -694,13 +694,13 @@
                                                 <li class="widget-list-item">
                                                     <!-- insert the brandId at the end of href as param.. ie. product/category-and-brand?brandId=? -->
                                                     <a class="widget-list-link"
-                                                       th:href="@{brand/23}">Oatly</a>
+                                                       th:href="@{/brand/23}">Oatly</a>
                                                 </li>
 
                                                 <li class="widget-list-item">
                                                     <!-- insert the brandId at the end of href as param.. ie. product/category-and-brand?brandId=? -->
                                                     <a class="widget-list-link"
-                                                       th:href="@{brand/24}">Doozy Pots
+                                                       th:href="@{/brand/24}">Doozy Pots
                                                    </a>
                                                 </li>
 
@@ -734,13 +734,13 @@
                                                 <li class="widget-list-item">
                                                     <!-- insert the brandId at the end of href as param.. ie. product/category-and-brand?brandId=? -->
                                                     <a class="widget-list-link"
-                                                       th:href="@{brand/25}">Hippeas</a>
+                                                       th:href="@{/brand/25}">Hippeas</a>
                                                 </li>
 
                                                 <li class="widget-list-item">
                                                     <!-- insert the brandId at the end of href as param.. ie. product/category-and-brand?brandId=? -->
                                                     <a class="widget-list-link"
-                                                       th:href="@{brand/26}">Terra</a>
+                                                       th:href="@{/brand/26}">Terra</a>
                                                 </li>
 
                                             </ul>
@@ -774,7 +774,7 @@
                                                 <li class="widget-list-item">
                                                     <!-- insert the brandId at the end of href as param.. ie. product/category-and-brand?brandId=? -->
                                                     <a class="widget-list-link"
-                                                       th:href="@{brand/27}">Hope</a>
+                                                       th:href="@{/brand/27}">Hope</a>
                                                 </li>
 
                                             </ul>
